[gd_scene load_steps=18 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/crosshair.png" type="Texture" id=2]
[ext_resource path="res://Molotov/MolotovWeapon.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/WeaponManager.gd" type="Script" id=4]
[ext_resource path="res://Bolt Rifle/BoltRifleWeapon.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player/PauseManager.gd" type="Script" id=6]
[ext_resource path="res://Pistol/PistolWeapon.tscn" type="PackedScene" id=7]
[ext_resource path="res://Player/PlayerHud.gd" type="Script" id=9]
[ext_resource path="res://Player/PlayerHands.gd" type="Script" id=11]
[ext_resource path="res://Assets/Roboto-Bold.ttf" type="DynamicFontData" id=22]

[sub_resource type="Animation" id=18]
resource_name = "Die"
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.10125, 0 ), Vector3( 0, 0.170828, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 180, 0 ), Vector3( 13.009, 180, -1.99877e-06 ) ]
}

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Camera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 1.10125, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 180, 0 ) ]
}

[sub_resource type="CapsuleShape" id=1]
radius = 0.25
height = 0.615169

[sub_resource type="CapsuleMesh" id=2]

[sub_resource type="DynamicFont" id=16]
size = 72
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 22 )

[sub_resource type="DynamicFont" id=15]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 22 )

[sub_resource type="DynamicFont" id=17]
size = 72
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 22 )

[node name="Player" type="KinematicBody"]
pause_mode = 1
collision_mask = 218
script = ExtResource( 1 )

[node name="DeathAnim" type="AnimationPlayer" parent="."]
anims/Die = SubResource( 18 )
anims/RESET = SubResource( 19 )

[node name="PauseManager" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 6 )

[node name="WeaponManager" type="Node" parent="."]
script = ExtResource( 4 )
molotov_node = NodePath("../PlayerHUD/PlayerHands/MolotovWeapon")
bolt_rifle_node = NodePath("../PlayerHUD/PlayerHands/BoltRifleWeapon")
pistol_node = NodePath("../PlayerHUD/PlayerHands/PistolWeapon")

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.562997, 0 )
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.10125, 0 )
fov = 90.0
far = 500.0

[node name="MolotovSpawn" type="Spatial" parent="Camera"]
transform = Transform( -1, -6.30363e-08, 1.37208e-07, 0, 0.90869, 0.417471, -1.50996e-07, 0.417471, -0.90869, 0.243513, 0.0432999, -0.649571 )

[node name="RayCast" type="RayCast" parent="Camera"]
visible = false
enabled = true
cast_to = Vector3( 0, 0, -100 )
collision_mask = 62
collide_with_areas = true

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.410807, 0, 0, 0, -1.82704e-08, -0.417978, 0, 0.407516, -1.78131e-08, 0, 0.681093, 0 )
visible = false
mesh = SubResource( 2 )

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="PlayerHUD" type="CanvasLayer" parent="."]
script = ExtResource( 9 )

[node name="PlayerHands" type="Control" parent="PlayerHUD"]
modulate = Color( 0.329412, 0.513726, 0.423529, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
script = ExtResource( 11 )

[node name="WeaponSwayTween" type="Tween" parent="PlayerHUD/PlayerHands"]
repeat = true
playback/repeat = true

[node name="ReturnToCenterTween" type="Tween" parent="PlayerHUD/PlayerHands"]

[node name="BoltRifleWeapon" parent="PlayerHUD/PlayerHands" instance=ExtResource( 5 )]
visible = false

[node name="MolotovWeapon" parent="PlayerHUD/PlayerHands" instance=ExtResource( 3 )]

[node name="PistolWeapon" parent="PlayerHUD/PlayerHands" instance=ExtResource( 7 )]

[node name="Crosshair" type="TextureRect" parent="PlayerHUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -16.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausedText" type="Label" parent="PlayerHUD"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -121.0
margin_top = -243.0
margin_right = 121.0
margin_bottom = -157.0
custom_fonts/font = SubResource( 16 )
text = "Paused"
align = 1
valign = 1

[node name="StatsText" type="Label" parent="PlayerHUD"]
margin_left = 31.0
margin_top = 22.0
margin_right = 311.0
margin_bottom = 152.0
custom_fonts/font = SubResource( 15 )
text = "Speed"

[node name="MolotovChargeBar" type="ProgressBar" parent="PlayerHUD"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = 50.0
margin_right = 60.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerHealthLabel" type="Label" parent="PlayerHUD"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -112.0
margin_right = 302.0
custom_fonts/font = SubResource( 17 )
text = "100"
align = 1
valign = 1
